--- a/projeto/consulta.html
+++ b/projeto/consulta.html
@@ -42,31 +42,6 @@
             <button id="add-task">Adicionar Tarefa</button>
         </div>
     </div>
-
-
-    <div class="container">
-        <div class="caixa">
-            <h1 class="texto">Assistência</h1>
-            <img src="img/suporte-tecnico.png" alt="Profissionais" height="90px" width="90px">
-            <p class="sub_texto">Clique aqui</p>
-        </div>
-        <div class="caixa">
-            <h1 class="texto">Saúde</h1>
-            <img src="img/remedio.png" alt="Saúde" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
-        </div>
-        <div class="caixa">
-            <h1 class="texto">Segurança</h1>
-            <img src="img/escudo.png" alt="Segurança" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
-        </div>
-        <div class="caixa">
-            <h1 class="texto">Lista de tarefas</h1>
-            <img src="img/tarefa-concluida.png"Lista de tarefas" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
-        </div>
-    </div>
-
     <footer>
         <div class="footer-content">
             <div class="footer-links">
@@ -83,3 +58,5 @@
     <script src="tela_principal.js"></script>
 </body>
 </html>
+</html>
+
