--- a/projeto/tela_cadastro.html
+++ b/projeto/tela_cadastro.html
@@ -46,7 +46,7 @@
                 <input type="password" placeholder="Confirme sua senha" required>
                 <img width="20" height="20" src="https://img.icons8.com/ios/50/lock-2.png" alt="lock-2"/>
             </div>
-            <button type="button" class="submit-button" onclick="window.location.href='tela_perfil.html'">Cadastrar</button>
+            <a href="tela_principal.html"><button type="button" class="submit-button" onclick="window.location.href='tela_perfil.html'">Cadastrar</button></a>
           
             <div class="register-link">
                 <p>Já tem conta? <a href="tela_cadastro.html">Login</a></p>
