--- a/projeto/login.html
+++ b/projeto/login.html
@@ -39,10 +39,10 @@
                 <img width="20" height="20" src="https://img.icons8.com/ios/50/lock-2.png" alt="lock-2"/>
             </div>
            
-            <a href="tela_principal.html"><button type="button" class="submit-button" onclick="window.location.href='tela_perfil.html'">Cadastrar</button></a>
+            <a href="tela_principal.html"><button type="button" class="submit-button" onclick="window.location.href='tela_perfil.html'">Entrar</button></a>
           
             <div class="register-link">
-                <p>Não tem conta? <a href="tela_cadastro.html">Cadastr</a></p>
+                <p>Não tem conta? <a href="tela_cadastro.html">Cadastre-se</a></p>
             </div>
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
