--- a/projeto/tela_principal.html
+++ b/projeto/tela_principal.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-container">
             <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
-            <h2>Marta Gomes</h2>
+            <a href="perfil.html">Marta Gomes</a>
             <div class="title-container">
                 <h1 class="principal"></h1>
             </div>
