feat: Add links to profile page and update layout
This commit adds links to the profile page and updates the layout for better user experience.

--- a/Projeto final/Informacoes.html
+++ b/Projeto final/Informacoes.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
+            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
             <h2>Marta Gomes</h2>
             <div class="title-container">
                 <h1 class="principal">Saúde Pro</h1>
