--- a/Projeto final/perfil.html
+++ b/Projeto final/perfil.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="img/Logo Sa+¦de Pr+¦.png" alt="Logo Saúde Pro" class="logo">
+            <a href="tela_principal.html"><img src="img/Logo Sa+¦de Pr+¦.png" alt="Logo Saúde Pro" class="logo"></a>
             <div class="title-container">
                 <h1 class="principal">Marta Gomes</h1>
             </div>
