--- a/Projeto final/tela_principal.html
+++ b/Projeto final/tela_principal.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
+            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
             <h2>Marta Gomes</h2>
             <div class="title-container">
                 <h1 class="principal"></h1>
@@ -26,36 +26,43 @@
     <div class="container">
         <div class="caixa">
             <h1 class="texto">Assistência</h1>
-            <img src="img/suporte-tecnico.png" alt="Profissionais" height="90px" width="90px">
-            <a href="ajuda.html"><p class="sub_texto">Clique aqui</p></a>
+            <a href="ajuda.html">
+                <img src="img/suporte-tecnico.png" alt="Profissionais" height="90px" width="90px">
+            </a>
         </div>
         <div class="caixa">
-            <h1 class="texto">Remédios e agenda</h1>
-            <img src="img/remedio.png" alt="Saúde" height="80px" width="80px">
-            <a href="consulta.html"><p class="sub_texto">Clique aqui</p></a>
+            <h1 class="texto">Agenda</h1>
+            <a href="consulta.html">
+                <img src="img/remedio.png" alt="Saúde" height="80px" width="80px">
+            </a>
         </div>
         <div class="caixa">
             <h1 class="texto">Análise de glicose e batimentos</h1>
-            <img src="img/batimentos-cardiacos.png" alt="Segurança" height="80px" width="80px">
-            <a href="Informacoes.html"><p class="sub_texto">Clique aqui</p></a>
+            <a href="Informacoes.html">
+                <img src="img/batimentos-cardiacos.png" alt="Segurança" height="80px" width="80px">
+            </a>
         </div>
         <div class="caixa">
             <h1 class="texto">Lista de tarefas</h1>
-            <img src="img/tarefa-concluida.png" alt="Lista de tarefas" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
+            <a href="#">
+                <img src="img/tarefa-concluida.png" alt="Lista de tarefas" height="80px" width="80px">
+            </a>
         </div>
         <!-- Novas caixas -->
         <div class="caixa">
-            <h1 class="texto">Segurança</h1>
-            <img src="img/escudo.png" alt="Nova Caixa 1" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
+            <h1 class="texto">Notificações</h1>
+            <a href="notificacao.html">
+                <img src="img/packard-bell (1).png" alt="Notificações" height="80px" width="80px">
+            </a>
         </div>
         <div class="caixa">
             <h1 class="texto">Editar perfil</h1>
-            <img src="img/perfil.png" alt="Nova Caixa 2" height="80px" width="80px">
-            <p class="sub_texto">Clique aqui</p>
+            <a href="perfil.html">
+                <img src="img/perfil.png" alt="Editar perfil" height="80px" width="80px">
+            </a>
         </div>
     </div>
+    
 
     <!-- Rodapé -->
     <footer>
