--- a/Projeto final/ajuda.html
+++ b/Projeto final/ajuda.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
+            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
             <h2>Marta Gomes</h2>
             <div class="title-container">
                 <h3 class="principal"></h3>
