--- a/projeto/consulta.html
+++ b/projeto/consulta.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
+            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
             <a href="perfil.html">Marta Gomes</a>
             <div class="title-container">
                 <h1 class="principal"></h1>
