chore: Update profile page layout and links

--- a/Projeto final/tela_principal.html
+++ b/Projeto final/tela_principal.html
@@ -44,7 +44,7 @@
         </div>
         <div class="caixa">
             <h1 class="texto">Lista de tarefas</h1>
-            <a href="#">
+            <a href="todo.html">
                 <img src="img/tarefa-concluida.png" alt="Lista de tarefas" height="80px" width="80px">
             </a>
         </div>
