chore: Update image links in consulta.html and tela_principal.html
This commit updates the image links in consulta.html and tela_principal.html to fix broken images. The new links point to the correct image files, ensuring that the images are displayed correctly on the pages.

--- a/Projeto final/tela_principal.html
+++ b/Projeto final/tela_principal.html
@@ -51,7 +51,7 @@
         <div class="caixa" role="region" aria-labelledby="notificacoes-title">
             <h1 id="notificacoes-title" class="texto">Notificações</h1>
             <a href="notificacao.html" aria-label="Notificações">
-                <img src="img/packard-bell (1).png" alt="Ícone de notificações" height="80px" width="80px">
+                <img src="img/bell.png" alt="Ícone de notificações" height="80px" width="80px">
             </a>
         </div>
         <div class="caixa" role="region" aria-labelledby="editar-perfil-title">
