--- a/Projeto final/Informacoes.html
+++ b/Projeto final/Informacoes.html
@@ -10,51 +10,48 @@
 <body>
     <header>
         <div class="header-container">
-            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
+            <a href="perfil.html" aria-label="Ir para perfil"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
             <h2>Marta Gomes</h2>
             <div class="title-container">
                 <h1 class="principal">Saúde Pro</h1>
             </div>
             <nav>
-                <a href="#">Contatos</a>
-                <a href="#"><img src="img/Logo Saúde Pró.png" alt="Imagem" width="40" height="40"></a>
-                <a href="#"></a>
+                <a href="#" aria-label="Ir para contatos">Contatos</a>
+                <a href="tela_principal.html" aria-label="Imagem do logo"><img src="img/Logo Saúde Pró.png" alt="Logo Saúde Pró" width="40" height="40"></a>
+                <a href="#" aria-label="Link adicional"></a>
             </nav>
         </div>
     </header>
     
     <div class="container">
-        <!-- Container para os controles de glicose e batimento cardíaco -->
         <div class="controls-container">
-            <!-- Controle de Glicose -->
             <div class="glucose-control">
                 <h2>Controle de Glicose</h2>
                 <div class="glucose-input">
+                    <label for="glucose-input">Valor da glicose:</label>
                     <input type="number" id="glucose-input" placeholder="Valor da glicose" step="0.1">
                     <button id="add-glucose">Adicionar</button>
                 </div>
                 <div class="glucose-history">
-                    <canvas id="glucose-chart"></canvas>
+                    <canvas id="glucose-chart" aria-label="Gráfico de Glicose"></canvas>
                 </div>
             </div>
 
-            <!-- Controle de Batimento Cardíaco -->
             <div class="heart-rate-control">
                 <h2>Controle de Batimento Cardíaco</h2>
                 <div class="heart-rate-input">
+                    <label for="heart-rate-input">Valor do batimento cardíaco:</label>
                     <input type="number" id="heart-rate-input" placeholder="Valor do batimento cardíaco" step="1">
                     <button id="add-heart-rate">Adicionar</button>
                 </div>
                 <div class="heart-rate-history">
-                    <canvas id="heart-rate-chart"></canvas>
+                    <canvas id="heart-rate-chart" aria-label="Gráfico de Batimento Cardíaco"></canvas>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Script para manipulação do gráfico de batimento cardíaco -->
     <script>
-        // Configuração do gráfico de batimento cardíaco
         const ctxHeartRate = document.getElementById('heart-rate-chart').getContext('2d');
         const heartRateData = [];
         const heartRateLabels = [];
@@ -106,10 +103,8 @@
         });
     </script>
 
-    <!-- Inclua a biblioteca Chart.js em seu projeto -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-links">
