--- a/Projeto final/ajuda.html
+++ b/Projeto final/ajuda.html
@@ -13,63 +13,65 @@
 <body>
     <header>
         <div class="header-container">
-            <a href="perfil.html"><img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/></a>
+            <a href="perfil.html" aria-label="Perfil de Marta Gomes">
+                <img width="50" height="50" src="img/perfil.png" alt="Perfil" class="logo"/>
+            </a>
             <h2>Marta Gomes</h2>
             <div class="title-container">
                 <h3 class="principal"></h3>
             </div>
             <nav>
-                <a href="#">Contatos</a>
-                <a href="#"><img src="img/Logo Saúde Pró.png" alt="Imagem" width="40" height="40"></a>
+                <a href="#" aria-label="Contatos">Contatos</a>
+                <a href="tela_principal.html" aria-label="Logo Saúde Pró">
+                    <img src="img/Logo Saúde Pró.png" alt="Imagem" width="40" height="40">
+                </a>
                 <a href="#"></a>
             </nav>
         </div>
     </header>
     <main>
-        <body>
-            <div class="body-text">
-                <h1>Apps que podem te ajudar</h1>
-            </div>
-        </body>
-        <section id="compras">
-            <h2>Apps para Fazer Compras</h2>
+        <div class="body-text">
+            <h1>Apps que podem te ajudar</h1>
+        </div>
+        <section id="compras" aria-labelledby="compras-title">
+            <h2 id="compras-title">Apps para Fazer Compras</h2>
             <p>Aqui estão alguns aplicativos que podem ajudar com suas compras:</p>
             <ul>
                 <li>
                     <h3>Mercado Livre</h3>
                     <p>Plataforma de e-commerce que oferece uma vasta gama de produtos com opções de entrega.</p>
-                    <a href="https://www.mercadolivre.com.br" target="_blank">Visite o site</a>
+                    <a href="https://www.mercadolivre.com.br" target="_blank" aria-label="Visite o site do Mercado Livre">Visite o site</a>
                 </li>
                 <li>
                     <h3>iFood</h3>
                     <p>App de entrega de alimentos que permite pedir refeições de diversos restaurantes.</p>
-                    <a href="https://www.ifood.com.br" target="_blank">Visite o site</a>
+                    <a href="https://www.ifood.com.br" target="_blank" aria-label="Visite o site do iFood">Visite o site</a>
                 </li>
                 <li>
                     <h3>Rappi</h3>
                     <p>App que oferece serviços de entrega para alimentos, medicamentos e muito mais.</p>
-                    <a href="https://www.rappi.com.br" target="_blank">Visite o site</a>
+                    <a href="https://www.rappi.com.br" target="_blank" aria-label="Visite o site do Rappi">Visite o site</a>
                 </li>
             </ul>
         </section>
-        <section id="assistencia">
-            <h2>Apps para Solicitar Ajuda</h2>
+        <section id="assistencia" aria-labelledby="assistencia-title">
+            <h2 id="assistencia-title">Apps para Solicitar Ajuda</h2>
             <p>Aqui estão alguns aplicativos brasileiros que podem ajudar com assistência no dia a dia:</p>
             <ul>
                 <li>
                     <h3>Getninjas - saúde</h3>
                     <p>Plataforma para encontrar cuidadores e serviços na área de saúde.</p>
-                    <a href="https://www.getninjas.com.br/saude" target="_blank">Visite o site</a>
+                    <a href="https://www.getninjas.com.br/saude" target="_blank" aria-label="Visite o site do Getninjas - saúde">Visite o site</a>
                 </li>
                 <li>
                     <h3>Getninjas</h3>
                     <p>Plataforma que conecta idosos com especialistas diversos.</p>
-                    <a href="https://www.getninjas.com.br/" target="_blank">Visite o site</a>
+                    <a href="https://www.getninjas.com.br/" target="_blank" aria-label="Visite o site do Getninjas">Visite o site</a>
                 </li>
                 <li>
                     <h3>Beep Saúde</h3>
                     <p>Plataforma para fazer exames e Vacinas em casa.</p>
-                    <a href="https://beepsaude.com.br/" target="_blank">Visite o site</a>
+                    <a href="https://beepsaude.com.br/" target="_blank" aria-label="Visite o site do Beep Saúde">Visite o site</a>
                 </li>
             </ul>
         </section>
@@ -77,9 +79,9 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="#medication-management">Gerenciamento de Medicamentos</a> |
-                <a href="#health-monitoring">Monitoramento de Saúde</a> |
-                <a href="#safety-assistance">Segurança e Assistência</a> |
+                <a href="#medication-management" aria-label="Gerenciamento de Medicamentos">Gerenciamento de Medicamentos</a> |
+                <a href="#health-monitoring" aria-label="Monitoramento de Saúde">Monitoramento de Saúde</a> |
+                <a href="#safety-assistance" aria-label="Segurança e Assistência">Segurança e Assistência</a>
             </div>
         </div>
     </footer>
