--- a/projeto/tela_principal.html
+++ b/projeto/tela_principal.html
@@ -17,7 +17,7 @@
             </div>
             <nav>
                 <a href="#">Contatos</a>
-                <a href="#"><img src="img/Logo Saúde Pró.png" alt="Imagem" width="40" height="40"></a>
+                <a href="tela_principal.html"><img src="img/Logo Saúde Pró.png" alt="Imagem" width="40" height="40"></a>
                 <a href="#"></a>
             </nav>
         </div>
